k8s/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-root
spec:
  redirectRegex:
    regex: ^https?://www\.(.+)
    replacement: https://$1
    permanent: true
