k8s/heliotrope.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heliotrope
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heliotrope
  template:
    metadata:
      labels:
        app: heliotrope
    spec:
      containers:
        - name: heliotrope
          image: ghcr.io/saebasol/heliotrope:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: heliotrope
spec:
  type: ClusterIP
  selector:
    app: heliotrope
  ports:
    - name: http
      port: 8000
      targetPort: 8000
